# G030-T12_V2

./: .mxproject  G030-T12_v2.ioc
CAD_models_STM32G030K6T6/: LQFP-32.step  STM32G030K6T6.LibPkg  STM32G030K6T6.PcbLib  STM32G030K6T6.SchLib  STM32G030K6T6.txt
Core/Inc/: Flash.h  i2c.h  main.h  stm32_button.h  stm32g0xx_it.h  tim.h  timer.h  toolkit.h  toolkit_cfg.h
Core/Src/: Flash.c  PID.c  adc.c  gpio.c  i2c.c  main.c  oled_driver.c  spi.c  stm32_button.c  stm32g0xx_it.c  tim.c  timer.c  tk_timer.c
Core/Src/u8g2/: u8g2_fonts.c
MDK-ARM/: .clangd  G030-T12_v2+G030T12v2.cprj  G030-T12_v2.uvguix.Administrator  G030-T12_v2.uvguix.Robin Lu  G030-T12_v2.uvguix.霍春昊  G030-T12_v2.uvprojx  startup_stm32g030xx.lst  vcpkg-configuration.json
MDK-ARM/G030-T12_v2/: G030-T12_v2.map  G030-T12_v2_sct.Bak
MDK-ARM/RTE/CMSIS/: RTX_Config.h
MDK-ARM/RTE/_G030-T12_v2/: RTE_Components.h
MDK-ARM/RTE/_G030T12v2/: RTE_Components.h
MDK-ARM/tmp/G030-T12_v2/G030T12v2/: CMakeCache.txt  CMakeLists.txt
PCB/: G030-T12_v2.OutJob  G030-T12_v2.PrjPcb  Sheet1.SchDoc
PCB/Project Outputs for G030-T12_v2/: PCB1-RoundHoles.TXT  PCB1-SlotHoles.TXT  PCB1.GBL  PCB1.GBO  PCB1.GBS  PCB1.GKO  PCB1.GTL  PCB1.GTO  PCB1.GTS  PCB1.LDP
PCB/__Previews/: Sheet1.SchDocPreview
__Previews/: Sheet1.SchDocPreview
